2002-05-29  Naba Kumar <kh_naba@users.sourceforge.net>

	* scintilla/*, scintilla/include/*: Upgraded to the vanilla
	scintilla 1.46
	
2002-05-27	Jean-Noel Guiheneuf	<jnoel@saudionline.com.sa>

	* src/project_import_gui.c: disallow allow the selection of files in
	  the browse dialog.
	* src/mainmenu_callbacks.c, src/preferences.c: cleanups to identity
	  preferences code.
        
2002-05-27	Biswapesh Chattopadhyay	<biswapesh_chatterjee@tcscal.co.in>

	* src/an_file_view.c, src/an_symbol_view.c, src/text_editor_menu.c,
	  src/main_menubar_def.h, src/pixmaps.h, :Added some icons to menu items.
	* src/controls.c, src/main_menubar.[ch]:Some menu organization cleanups.
	* src/project_dbase.[ch], src/project_dbase_gui.c: Adding files to projects
	  now works properly.
	* src/gnome_project.c, src/mainmenu_callbacks.[ch]: Minor API change.
	* scintilla/include/PropSet.h, tagmanager/read.c: Accept '$' in identifiers.
	* src/utilities.[ch]: Added some utility functions.
	* tagmanager/tm_project.c: Fix for bug in file removal from project.
	
	Patch reviewed by Andy Piper <andy.piper@freeuk.com>

2002-05-26	Andy Piper	<andy.piper@freeuk.com>

	* HACKING: info on FIXME statements and removed ccview references
	* Makefile.am: added rule to make RPM package

2002-05-26	Andy Piper	<andy.piper@freeuk.com>

	* THANKS, widgets/e-shell-about-box.c, 
	manuals/anjuta-manual/C/authors.sgml: updated for new
	patch
	* src/anjuta.c: removed unnecessary warning code since CVS 
	support is now implemented :-)
	* manuals/sgmldocs.make: implemented a fix for bug #553969
	* manuals/C/anjuta-tutorial/anjuta-tutorial.sgml: fixed some CRs
	* manuals/C/anjuta-tutorial/anjuta-turorial-C.omf, 
	manuals/C/anjuta-faqs-C.omf: modified the descriptions
	
2002-05-20 Jean-Noel Guiheneuf <jnoel@saudionline.com.sa>
	
	* src/main_menubar.c, src/main_menubar.h, src/controls.c,
	  src/mainmenu_callbacks.c, src/mainmenu_callbacks.h,
	  src/main_menubar_def.h, src/preferences_gui.c,