@@ -160,6 +160,9 @@ view.indentation.whitespace=1
 # Should the indentation guides be visible (0/1)
 view.indentation.guides=0
 
+# Should the line wrap be on by default?(0/1)
+view.line.wrap=1
+
 # Should the Monospaced Font be used by default
 use.monospaced=1
 
